--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 body {
   font-family: 'Lato', arial, sans-serif;
   color: #000080;
-  background: #DAE3E7;
+  background: #D3D3D3;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
